Fixed the over lap on work experience on mobile

--- a/src/routes/WorkExperience/components/WorkExperienceItem/WorkExperienceItem.module.css
+++ b/src/routes/WorkExperience/components/WorkExperienceItem/WorkExperienceItem.module.css
@@ -12,8 +12,8 @@
     flex-direction: column;
     flex: 1;
     max-width: 650px;
-    margin-bottom: 25px;
-
+    margin-bottom: 35px;
+    border: 1px solid gold;
 }
 
 .infoContainer {
@@ -30,7 +30,6 @@
 
 .img {
     width: 100%;
-    max-height: 100%;
     max-width: 250px;
 }
 
@@ -50,7 +49,6 @@
 
 .imgContainer {
     width: 100%;
-    min-height: 40%;
     max-height: 40%;
     margin: 25px 0px;
 }
